--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <a href="#"><h1>Hand- <br>
                 Footprint</h1></a>
             <ul>
-                <li><a href="#">Bedrijf</a></li>
-                <li><a href="#">Klanten</a></li>
-                <li><a href="#">Leveranciers</a></li>
-                <li><a href="#">Medewerkers</a></li>
-                <li><a href="#">Financiers</a></li>
-                <li><a href="#">Omgeving</a></li>
-                <li><a href="#">Meer</a></li>
+                <li><div class="icon"></div><a href="#">Bedrijf</a></li>
+                <li><div class="icon"></div><a href="#">Klanten</a></li>
+                <li><div class="icon"></div><a href="#">Leveranciers</a></li>
+                <li><div class="icon"></div><a href="#">Medewerkers</a></li>
+                <li><div class="icon"></div><a href="#">Financiers</a></li>
+                <li><div class="icon"></div><a href="#">Omgeving</a></li>
+                <li><div class="icon"></div><a href="#">Meer</a></li>
             </ul>
         </nav>   
     </header>
@@ -37,16 +37,26 @@
             </div>
         </section>
         <section>
-            <div id="myProgress">
-                <div id="myBar"></div>
+            <div class="progress-bar">
+                <span style="width: 25%;"></span>
             </div>
-            <section>
-                <article>
-
-                </article>
-                <article>
-
-                </article>
+            <section class="hand-foot">
+                <section>
+                    <article></article>
+                    <div class="leaderboard">
+                        <article></article>
+                        <article></article>
+                        <article></article>
+                    </div>
+                </section>
+                <section>
+                    <article></article>
+                    <div class="leaderboard">
+                        <article></article>
+                        <article></article>
+                        <article></article>
+                    </div>
+                </section>
             </section>
             <button type="button" class="button">Calculeer opnieuw!</button>
         </section>
@@ -54,8 +64,8 @@
             <h2>Breakdown</h2>
             <div class="breakdown_handprint">
                 <h3>Handprint</h3>
-                <div id="myProgress">
-                    <div id="myBar"></div>
+                <div class="progress-bar">
+                    <span style="width: 25%;"></span>
                 </div>
                 <div class="breakdown_blocks">
                     <article></article>
@@ -70,8 +80,8 @@
 
             <div class="breakdown_footprint">            
                 <h3>Footprint</h3>
-                <div id="myProgress">
-                    <div id="myBar"></div>
+                <div class="progress-bar">
+                    <span style="width: 25%;"></span>
                 </div>
                 <div class="breakdown_blocks">
                     <article></article>
