--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><div class="icon"></div><a href="#">Medewerkers</a></li>
                 <li><div class="icon"></div><a href="#">Financiers</a></li>
                 <li><div class="icon"></div><a href="#">Omgeving</a></li>
-                <li><div class="icon"></div><a href="#">Meer</a></li>
+                <li class="meer"><div class="icon"></div><a href="#">Meer</a></li>
             </ul>
         </nav>   
     </header>
@@ -44,17 +44,17 @@
                 <section>
                     <article></article>
                     <div class="leaderboard">
-                        <article></article>
-                        <article></article>
-                        <article></article>
+                        <article><span class="number">1.</span></article>
+                        <article><span class="number">2.</span></article>
+                        <article><span class="number">3.</span></article>
                     </div>
                 </section>
                 <section>
                     <article></article>
                     <div class="leaderboard">
-                        <article></article>
-                        <article></article>
-                        <article></article>
+                        <article><span class="number">1.</span></article>
+                        <article><span class="number">2.</span></article>
+                        <article><span class="number">3.</span></article>
                     </div>
                 </section>
             </section>
