--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><div class="icon"></div><a href="#">Bedrijf</a></li>
                 <li><div class="icon"></div><a href="#">Klanten</a></li>
                 <li><div class="icon"></div><a href="#">Leveranciers</a></li>
-                <li><div class="icon"></div><a href="#">Medewerkers</a></li>
+                <li><div class="icon"><img src="styles/assets/icons/icons_medewerkers.svg" alt=""></div><a href="#">Medewerkers</a></li>
                 <li><div class="icon"></div><a href="#">Financiers</a></li>
                 <li><div class="icon"></div><a href="#">Omgeving</a></li>
                 <li class="meer"><div class="icon"></div><a href="#">Meer</a></li>
@@ -24,6 +24,7 @@
         </nav>   
     </header>
     <main>
+        
         <section class="profile">
             <article>
             <h2>John Doe</h2>
